--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.0
   shared_preferences: ^2.2.2
   flutter_screenutil: ^5.9.0
+  table_calendar: ^3.1.0
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -85,12 +87,12 @@ flutter:
     - family: Roboto
       fonts:
         - asset: assets/fonts/roboto/Roboto-Black.ttf
-        - asset: assets/fonts/inter/Roboto-Bold.ttf
-        - asset: assets/fonts/inter/Roboto-Italic.ttf
-        - asset: assets/fonts/inter/Roboto-Light.ttf
-        - asset: assets/fonts/inter/Roboto-Medium.ttf
-        - asset: assets/fonts/inter/Roboto-Regular.ttf
-        - asset: assets/fonts/inter/Roboto-ThinItalic.ttf
+        - asset: assets/fonts/roboto/Roboto-Bold.ttf
+        - asset: assets/fonts/roboto/Roboto-Italic.ttf
+        - asset: assets/fonts/roboto/Roboto-Light.ttf
+        - asset: assets/fonts/roboto/Roboto-Medium.ttf
+        - asset: assets/fonts/roboto/Roboto-Regular.ttf
+        - asset: assets/fonts/roboto/Roboto-ThinItalic.ttf
 
     # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
