--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   table_calendar: ^3.1.0
   sqflite: ^2.3.2
+  zoom_tap_animation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
