--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   table_calendar: ^3.1.0
   sqflite: ^2.3.2
   zoom_tap_animation: ^1.1.0
-
+  shrink_sidemenu: ^2.0.0+2-null-safety
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   flutter_test:
